--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 
     <!-- CTN1 -->
-    <div class="home" id="home">
+    <section class="home" id="home">
         <div class="home-upper"></div>
         <div class="container">
             <div class="row">
@@ -81,11 +81,11 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     
     <!-- CTN2 -->
-    <div class="partners">
+    <div class="partners-section">
         <div class="container">
             <div class="row">
                 <div class="box10 mar-auto text-center partners">
@@ -100,7 +100,7 @@
     </div>
 
     <!-- CTN3 -->
-    <div class="background-grey" id="about">
+    <section class="background-grey" id="about">
         <div class="container">
             <div class="row">
                 <div class="box12 text-center marbot10">
@@ -141,10 +141,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- CTN4 -->
-    <div class="backdround-white">
+    <section class="backdround-white">
         <div class="container">
             <div class="row align-items-center">
                 <div class="box6 slideInLeft" data-wow-delay="0.25s" style="visibility: visible; animation-delay: 0.25s; animation-name: slideInLeft;">
@@ -167,10 +167,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- CTN5 -->
-    <div class="background-grey">
+    <section class="background-grey">
         <div class="container">
             <div class="row align-items-center">
                 <div class="box6">
@@ -228,10 +228,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- CTN6 -->
-    <div class="background1">
+    <section class="background1">
         <div class="backgroundupper"></div>
         <div class="container">
             <div class="row">
@@ -241,7 +241,7 @@
             </div>
 
             <div class="row">
-                <div class="box2 os2 fun-facts-box text-center">
+                <div class="box2 os12 fun-facts-box text-center">
                     <i class="far fa-gem"></i>
                     <p class="fun-facts-title"><span class="facts-numbers">1050+</span><br>Projects Completed</p>
                 </div>
@@ -262,10 +262,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- CTN7 -->
-    <div class="background-grey" id="testimonials">
+    <section class="background-grey" id="testimonials">
         <div class="container">
             <div class="row align-items-center">
                 <div class="box5 col-gr2">
@@ -363,10 +363,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- CTN8 -->
-    <div class="backdround-white" id="portfolio">
+    <section class="backdround-white" id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="box12 text-center marbot30">
@@ -428,10 +428,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- CTN9 -->
-    <div class="background-grey" id="team">
+    <section class="background-grey" id="team">
         <div class="container">
             <div class="row">
                 <div class="box12 text-center">
@@ -474,10 +474,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!--CTN10 -->
-    <div class="background2">
+    <section class="background2">
         <div class="backgroundupper"></div>
         <div class="container">
             <div class="row">
@@ -490,10 +490,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- CTN11 -->
-    <div class="background-white" id="features">
+    <section class="background-white" id="features">
         <div class="container">
             <div class="row">
                 <div class="box12 text-center padbot10">
@@ -575,10 +575,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- CTN12 -->
-    <div class="background-grey" id="pricing">
+    <section class="background-grey" id="pricing">
         <div class="container">
             <div class="row align-items-center">
                 <div class="box4 col-gr2">
@@ -616,10 +616,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- CTN13 -->
-    <div class="backdround-white" id="faq">
+    <section class="backdround-white" id="faq">
         <div class="container">
             <div class="row">
                 <div class="box12 text-center padbot10">
@@ -660,10 +660,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- CTN13 -->
-    <div class="background2" id="contact">
+    <section class="background2" id="contact">
         <div class="backgroundupper"></div>
         <div class="container">
             <div class="row">
@@ -709,7 +709,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
 
     <!-- CTN14-->
